--- a/index.html
+++ b/index.html
@@ -3,8 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/style/index.css" />
+    <link rel="stylesheet" href="/assets/style/index.css" />
     <title>card</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="card">
+        <!--~~~~~~~$Image $~~~~~~~-->
+        <div class="card__image">
+          <img src="./assets/images/illustration-article.svg" alt="" />
+        </div>
+
+        <!--~~~~~~~$ Card Content $~~~~~~~-->
+        <article class="card__body">
+          <a href="./learning">Learning</a>
+          <h3>Published 21 Dec 2023</h3>
+          <h4>HTML & CSS foundations</h4>
+          <p>
+            These languages are the backbone of every website, defining
+            structure, content, and presentation.
+          </p>
+        </article>
+
+        <!--~~~~~~~$ Card Footer $~~~~~~~-->
+        <div class="card__footer">
+          <div class="avatar__image">
+            <img src="./assets//images/image-avatar.webp" alt="avatar image" />
+          </div>
+
+          <p>Greg Hooper</p>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
